Añadiendo cambios full con algunas correcciones

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <div class="contenedor-video">
                 <video id="video" controls autoplay  width="530px" height="400px" name="media" controlslist="nodownload"></video>
             </div>
-            <button id="btn-2" class="button" onclick="anteriorVideo()">Anterior</button>
-            <button class="button" onclick="siguienteVideo()">Siguiente</button>
+            <div id="modo-responsive">
+                <button id="btn-2" class="button" onclick="anteriorVideo()">Anterior</button>
+                <button class="button" onclick="siguienteVideo()">Siguiente</button>
+            </div>
         </div>
     </div>
 </body>
