Añadiendo lista de capítulos

--- a/index.html
+++ b/index.html
@@ -13,20 +13,29 @@
     </script>
 </head>
 <body onbeforeunload="return salir()">
+    <div class="menu">
+        <button class="cerrar-sesion" onclick="cerrarSesion()">Cerrar sesión</button>
+    </div>
     <div class="center">
-        <div class="menu">
-            <button class="cerrar-sesion" onclick="cerrarSesion()">Cerrar sesión</button>
+        <div class="list" id="btn-list">
+            <button class="btn-list" id="btn-list-2" onclick="desplegarLista()">&#129154;</button>
+            <label class="orientacion-cap">Capitulos</label>
+            <ul id="listas-a">
+
+            </ul>
         </div>
-        <h1 id="title"></h1>
-        <h2 id="title-cap"></h2>
-        <div class="controls-video">
-            <button id="btn-1" class="button" onclick="anteriorVideo()">Anterior</button>
-            <div class="contenedor-video">
-                <video id="video" controls autoplay  width="530px" height="400px" name="media" controlslist="nodownload"></video>
-            </div>
-            <div id="modo-responsive">
-                <button id="btn-2" class="button" onclick="anteriorVideo()">Anterior</button>
-                <button class="button" onclick="siguienteVideo()">Siguiente</button>
+        <div class="content">
+            <h1 id="title"></h1>
+            <h2 id="title-cap"></h2>
+            <div class="controls-video">
+                <button id="btn-1" class="button" onclick="anteriorVideo()">Anterior</button>
+                <div class="contenedor-video">
+                    <video id="video" controls autoplay  width="530px" height="400px" name="media" controlslist="nodownload"></video>
+                </div>
+                <div id="modo-responsive">
+                    <button id="btn-2" class="button" onclick="anteriorVideo()">Anterior</button>
+                    <button class="button" onclick="siguienteVideo()">Siguiente</button>
+                </div>
             </div>
         </div>
     </div>
