Añadiendo loading y configurando entrada en video actual

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button class="cerrar-sesion" onclick="cerrarSesion()">Cerrar sesión</button>
     </div>
     <div class="center">
+        <div class="fixed-center" id="cargando">Cargando ...</div>
         <div class="list" id="btn-list">
             <button class="btn-list" id="btn-list-2" onclick="desplegarLista()">&#129154;</button>
             <label class="orientacion-cap">Capitulos</label>
