Cambiando de servidor de videos y añadiendo series

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body onbeforeunload="return salir()">
     <div class="menu">
+        <button class="cerrar-sesion left" onclick="home()">Inicio</button>
         <button class="cerrar-sesion" onclick="cerrarSesion()">Cerrar sesión</button>
     </div>
     <div class="center">
