Añadiendo cambios de JWT

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <button id="btn-1" class="button" onclick="anteriorVideo()">Anterior</button>
                 <div class="contenedor-video">
                     <video id="video" controls autoplay  width="530px" height="400px" name="media" controlslist="nodownload"></video>
+                    <button id="skip" onclick="cambiarTiempoSkip()">Saltar intro</button>
                 </div>
                 <div id="modo-responsive">
                     <button id="btn-2" class="button" onclick="anteriorVideo()">Anterior</button>
