Añadiendo curso asincronismo javascript

--- a/indexSeriesAll.html
+++ b/indexSeriesAll.html
@@ -234,51 +234,65 @@
             <did class="series-column">
                 <div id="series-row" class="series-row">
                     <a class="target-serie" href="/index.html?nombreSerie=harry1">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmef6ypjGcpnDOcGhZUr7tGf9-a4ROfEp-rkwzRIeWMBjBFkQA" alt="Harry Potter y la piedra filosofal" />
+                        <img src="./images/harry1.jpg" alt="Harry Potter y la piedra filosofal" />
                         <div class="nombre-serie">
                             Harry Potter y<br>la piedra<br>filosofal
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harry2">
-                        <img src="https://static.wikia.nocookie.net/harrypotter/images/c/c5/Harry_Potter_and_the_Chamber_of_Secrets_UK_Poster.jpg/revision/latest?cb=20150209181936" alt="Harry Potter y la cámara secreta" />
+                        <img src="./images/harry2.jpg" alt="Harry Potter y la cámara secreta" />
                         <div class="nombre-serie">
                             Harry Potter y<br>la cámara secreta
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harry3">
-                        <img src="http://es.web.img2.acsta.net/pictures/14/04/30/11/36/185120.jpg" alt="Harry Potter y el prisionero de Azkaban" />
+                        <img src="./images/harry3.webp" alt="Harry Potter y el prisionero de Azkaban" />
                         <div class="nombre-serie">
                             Harry Potter y<br>el prisionero<br>de Azkaban
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harry4">
-                        <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT0PyHvUeEZjG3PeVsGH_usVy52_J9TZ4-IIkWKUZdSIdAoioL3" alt="Harry Potter y el cáliz de fuego" />
+                        <img src="./images/harry4.jpg" alt="Harry Potter y el cáliz de fuego" />
                         <div class="nombre-serie">
                             Harry Potter y<br>el cáliz de fuego
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harry5">
-                        <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcR8pHJ8lJNGv_04sKVf-AF3hxAxDFMjDcQob9diKCPGNkNq2kf7" alt="Harry Potter y la orden del Fénix" />
+                        <img src="./images/harry5.jpg" alt="Harry Potter y la orden del Fénix" />
                         <div class="nombre-serie">
                             Harry Potter y<br>y la orden<br>del Fénix
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harry6">
-                        <img src="https://r3.abcimg.es/resizer/resizer.php?imagen=https%3A%2F%2Fstatic4.abc.es%2Fmedia%2Fpeliculas%2F000%2F027%2F037%2Fharry-potter-y-el-misterio-del-principe-1.jpg&nuevoancho=690&medio=abc" alt="Harry Potter y el misterio del principe" />
+                        <img src="./images/harry6.jpg" alt="Harry Potter y el misterio del principe" />
                         <div class="nombre-serie">
                            Harry Potter y<br>el misterio<br>del principe
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harry7">
-                        <img src="https://static.wikia.nocookie.net/harrypotter/images/a/ab/Deathly_Hallows_1_poster.jpg/revision/latest?cb=20151102033339" alt="Harry Potter y las reliquias de la muerte 1" />
+                        <img src="./images/harry7.jpg" alt="Harry Potter y las reliquias de la muerte 1" />
                         <div class="nombre-serie">
                             Harry Potter y<br>las reliquias de<br>la muerte 1
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harry8">
-                        <img src="https://static.wikia.nocookie.net/harrypotter/images/9/95/Harry_Potter_and_the_Deathly_Hallows_Part_2_promotional_poster.jpg/revision/latest?cb=20130803164345" alt="Harry Potter y las reliquias de la muerte 2" />
+                        <img src="./images/harry8.jpg" alt="Harry Potter y las reliquias de la muerte 2" />
                         <div class="nombre-serie">
                             Harry Potter y<br>las reliquias de<br>la muerte 2
+                        </div>
+                    </a>
+                </div>
+            </did>
+            <button class="avanzar-lista" onclick="avanzar()">&#10097;</button>
+        </div>
+        <div class="series-with-name">
+            <h2>Cursos platzi</h2>
+            <did class="series-column">
+                <div id="series-row" class="series-row">
+                    <a class="target-serie" href="/index.html?nombreSerie=asincronismoJavascript">
+                        <img src="./images/javascript.webp" alt="Curso de Asincronismo en Javascript" />
+                        <div class="nombre-serie">
+                            Curso de<br>Asincronismo en<br>Javascript
                         </div>
                     </a>
                 </div>
