añadiendo curso de ecmascript6

--- a/indexSeriesAll.html
+++ b/indexSeriesAll.html
@@ -295,10 +295,17 @@
                             Curso de<br>Asincronismo en<br>Javascript
                         </div>
                     </a>
+                    <a class="target-serie" href="/index.html?nombreSerie=ECMAscript6">
+                        <img src="./images/ecmascript.webp" alt="ECMAscript 6+" />
+                        <div class="nombre-serie">
+                            ECMAscript 6+
+                        </div>
+                    </a>
                 </div>
             </did>
             <button class="avanzar-lista" onclick="avanzar()">&#10097;</button>
         </div>
+        
     </div>
 </body>
 <script src="./javascript/indexSeriesAll.js"></script>
