Añadiendo iron man 3

--- a/indexSeriesAll.html
+++ b/indexSeriesAll.html
@@ -305,6 +305,20 @@
             </did>
             <button class="avanzar-lista" onclick="avanzar()">&#10097;</button>
         </div>
+        <div class="series-with-name">
+            <h2>Marvel</h2>
+            <did class="series-column">
+                <div id="series-row" class="series-row">
+                    <a class="target-serie" href="/index.html?nombreSerie=IronMan3">
+                        <img src="./images/ironman3.jpg" alt="Iron Man 3" />
+                        <div class="nombre-serie">
+                            Iron Man 3
+                        </div>
+                    </a>
+                </div>
+            </did>
+            <button class="avanzar-lista" onclick="avanzar()">&#10097;</button>
+        </div>
         
     </div>
 </body>
