--- a/ingreso.html
+++ b/ingreso.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/ingreso.css">
-    <title>Ingreso Hundres Cinema</title>
+    <title>Ingreso Hundres Series</title>
+    <link rel="shortcut icon" href="./images/iconfavi.ico" type="image/x-icon">
 </head>
 <body>
     <main id="pantalla-completa">
+        <img class="logo" src="./images/logo.png"/>
         <div class="contenedor-form">
             <h2>Ingreso</h2>
             <label>Correo:</label>
