Cambiando nombre de dominio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scooby-Doo</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <script>
         var email = localStorage.getItem("email");
         if(email===null){
@@ -42,6 +43,6 @@
             </div>
         </div>
     </div>
+    <script src="./javascript/index.js"></script>
 </body>
-<script src="./javascript/index.js"></script>
 </html>
