--- a/indexSeriesAll.html
+++ b/indexSeriesAll.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="./styles/styleSeriesAll.css">
-    <link rel="shortcut icon" href="./images/iconfavi.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 
     <script>
         var email = localStorage.getItem("email");
@@ -17,7 +17,8 @@
 <body onbeforeunload="return salir()">
     <div class="center">
         <div class="menu">
-            <img id="logo-menu" src="./images/logoletrag.png" />
+            <img id="logo-menu" src="./images/logo1.png" />
+            <h2 style="margin-left:10px;">Hundres</h2>
             <!-- <img id="logo-menu" src="./images/logoRed.png" /> -->
             <button class="cerrar-sesion left" onclick="home()">Inicio</button>
             <button class="cerrar-sesion" onclick="cerrarSesion()">Cerrar sesión</button>
@@ -325,6 +326,6 @@
         </div>
         
     </div>
+    <script src="./javascript/indexSeriesAll.js"></script>
 </body>
-<script src="./javascript/indexSeriesAll.js"></script>
 </html>
