--- a/ingreso.html
+++ b/ingreso.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/ingreso.css">
     <title>Ingreso Hundres Series</title>
-    <link rel="shortcut icon" href="./images/iconfavi.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <main id="pantalla-completa">
-        <img class="logo" src="./images/logo.png"/>
+        <img class="logo" src="./images/logo.png" width="200px"/>
         <div class="contenedor-form">
             <h2>Ingreso</h2>
             <label>Correo:</label>
