--- a/indexSeriesAll.html
+++ b/indexSeriesAll.html
@@ -36,58 +36,46 @@
                             Scooby Doo<br>¿Donde estás?
                         </div>
                     </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/087/original/24qiuu1.jpg?1532296805" alt="Scooby Doo" />
+                    <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudiolapiedrafilosofal">
+                        <img src="https://kbimages1-a.akamaihd.net/7a10b8aa-803e-4134-bc64-1207d5447e43/1200/1200/False/harry-potter-y-la-piedra-filosofal-2.jpg" alt="Scooby Doo" />
                         <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
+                            Harry Potter<br>y la piedra filosofal
                         </div>
                     </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/094/original/MV5BMTYyNzYxZjItZDQ2YS00NzUwLWJjMjAtZTBlZWEzMGNlZjg3XkEyXkFqcGdeQXVyMjM5NDQzNTk_._V1_.jpg?1532299871" alt="Scooby Doo" />
+                    <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudiolacamarasecreta">
+                        <img src="https://m.media-amazon.com/images/I/51yE3IE7yKL.jpg" alt="Scooby Doo" />
                         <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
+                            Harry Potter<br>y la cámara secreta
                         </div>
                     </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/105/original/51B58WHQZTL._SX358_BO1_204_203_200_.jpg?1532346387" alt="Scooby Doo" />
+                    <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudioelprisionerodeazkaban">
+                        <img src="https://m.media-amazon.com/images/I/51CzTv50t3L._SL500_.jpg" alt="Scooby Doo" />
                         <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
+                            Harry Potter<br>y el prisionero<br>de Azkaban
                         </div>
                     </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/122/original/images.jpeg?1532380250" alt="Scooby Doo" />
+                    <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudioelcalizdefuego">
+                        <img src="https://m.media-amazon.com/images/I/51G8SIjWprL._SL500_.jpg" alt="Scooby Doo" />
                         <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
+                            Harry Potter<br>y el cáliz de fuego
                         </div>
                     </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/123/original/s-l300.jpg?1532380838" alt="Scooby Doo" />
+                    <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudiolaordendelfenix">
+                        <img src="https://m.media-amazon.com/images/I/51Me10x8VVL._SL500_.jpg" alt="Scooby Doo" />
                         <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
+                            Harry Potter<br>y la orden<br>del fénix
                         </div>
                     </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/214/original/MV5BNzhmODE4MzktMmQ4ZC00Zjc1LWExMTYtOTgyNzIwODZmNTVmXkEyXkFqcGdeQXVyNjExODE1MDc_._V1_UY1200_CR123_0_630_1200_AL_.jpg?1556592344" alt="Scooby Doo" />
+                    <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudioelmisteriodelprincipe">
+                        <img src="https://images-na.ssl-images-amazon.com/images/I/51pZPtXtFrL._SY445_SX342_QL70_ML2_.jpg" alt="Scooby Doo" />
                         <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
+                            Harry Potter<br>y el misterio<br>del príncipe
                         </div>
                     </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/306/original/EB3cZU7.jpg?1593408970" alt="Scooby Doo" />
+                    <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudiolasreliquias">
+                        <img src="https://images-na.ssl-images-amazon.com/images/I/51ANSXFVzTL._SY445_SX342_QL70_ML2_.jpg" alt="Scooby Doo" />
                         <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/340/original/51IoRW-H97L.jpg?1597624574" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/348/original/MV5BNmU1YWQxN2MtNDhhMy00MjcxLTljMzUtNzQ2YzUxM2M1YWRhXkEyXkFqcGdeQXVyNjExODE1MDc_._V1_.jpg?1597627091" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
+                            Harry Potter<br>y las reliquias<br>de la muerte
                         </div>
                     </a>
                 </div>
