--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     </script>
 </head>
 <body onbeforeunload="return salir()">
+    <div id="siguienteSkip" class="siguienteSkip invisible">
+        <button class="button next" onclick="siguienteVideo()">
+            <spam id="clock" style="font-size: 50px;"></spam>
+        </button>
+        <button class="cancelSkipAuto" onclick="cancelSkipAuto()">Cancelar</button>
+    </div>
     <div class="menu">
         <button class="cerrar-sesion left" onclick="home()">Inicio</button>
         <button class="cerrar-sesion" onclick="cerrarSesion()">Cerrar sesión</button>
@@ -33,7 +39,7 @@
             
             <div class="controls-video">
                 <button id="btn-1" class="button" onclick="anteriorVideo()">Anterior</button>
-                <div class="contenedor-video">
+                <div id="contenedor-video" class="contenedor-video">
                     <video id="video" controls autoplay  width="530px" height="400px" name="media" controlslist="nodownload"></video>
                     <audio id="audio" controls="" controlslist="nodownload"></audio>
                     <button id="skip" onclick="cambiarTiempoSkip()">Saltar intro</button>
@@ -41,11 +47,12 @@
                 <div id="modo-responsive">
                     <button id="btn-2" class="button" onclick="anteriorVideo()">Anterior</button>
                     <button id="btn-sig" class="button" onclick="siguienteVideo()">Siguiente</button>
-                    <button id="siguienteSkip" class="button invisible" onclick="siguienteVideo()">Siguiente en <spam id="clock"></spam></button>
+                    <!-- <button id="siguienteSkip" class="button invisible next" onclick="siguienteVideo()">Siguiente en <spam id="clock"></spam></button> -->
                 </div>
             </div>
         </div>
     </div>
+    
     <script src="./javascript/index.js"></script>
 </body>
 </html>
