Creando cambios para solo Harry Potter

--- a/indexSeriesAll.html
+++ b/indexSeriesAll.html
@@ -23,19 +23,19 @@
             <button class="cerrar-sesion left" onclick="home()">Inicio</button>
             <button class="cerrar-sesion" onclick="cerrarSesion()">Cerrar sesión</button>
         </div>
-        <div>
-            <img class="image-principal" src="./images/scoobyBig.jpg" />
+        <div class="container-image-principal">
+            <img class="image-principal" src="./images/harrypotterbig.jpg" />
         </div>
         <div class="series-with-name">
-            <h2>Hanna Barbera</h2>
+            <h2>Harry Potter - Audiolibros</h2>
             <did class="series-column">
                 <div id="series-row" class="series-row">
-                    <a class="target-serie" href="/index.html?nombreSerie=Scooby">
+                    <!-- <a class="target-serie" href="/index.html?nombreSerie=Scooby">
                         <img src="./images/scoobyPeq.jpg" alt="Scooby Doo" />
                         <div class="nombre-serie">
                             Scooby Doo<br>¿Donde estás?
                         </div>
-                    </a>
+                    </a> -->
                     <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudiolapiedrafilosofal">
                         <img src="https://kbimages1-a.akamaihd.net/7a10b8aa-803e-4134-bc64-1207d5447e43/1200/1200/False/harry-potter-y-la-piedra-filosofal-2.jpg" alt="Scooby Doo" />
                         <div class="nombre-serie">
@@ -83,147 +83,7 @@
             <button class="avanzar-lista" onclick="avanzar()">&#10097;</button>
         </div>
         <div class="series-with-name">
-            <h2>Nickelodeon</h2>
-            <did class="series-column">
-                <div id="series-row" class="series-row">
-                    <a class="target-serie" href="/index.html?nombreSerie=Scooby">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/139/original/avatar_last_airbender.jpg?1531999787" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/140/original/576d2da5a041ceac61de9fbe03981a30.jpg?1532000239" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/141/original/Le2E6Gj.jpg?1532000609" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/142/original/catdog-temporada-3.jpg?1532001361" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/144/original/series.588.IMAGEN1.jpg?1532002167" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/145/original/MV5BMGU5MWQ3ZWItMzEzMy00NjljLWFjYzUtMGMxNTk2YWEwMzMyXkEyXkFqcGdeQXVyNjExODE1MDc_._V1_UY268_CR3_0_182_268_AL_.jpg?1532004954" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/150/original/poster-thumb-1733.jpg?1532007462" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/151/original/the_adventures_of_jimmy_neutron_boy_genius_tv_series-686841142-large.jpg?1532007791" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/153/original/lra.jpg?1532008929" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/156/original/Rocko's_Modern_Life_COVER.jpg?1532010815" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/157/original/81x-WUt8PIL._SY445_.jpg?1532011068" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/158/original/51OBRtrMXlL._SY445_.jpg?1532011306" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/160/original/230px-Mighty_B_we_got_the_bee_dvd_cover.png?1532012248" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/161/original/0002774728.jpg?1532012580" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/162/original/MV5BZTEwNTNiYjYtMTk4Mi00NWJhLWJhYmQtMmM5YzI0M2ZjMmZhXkEyXkFqcGdeQXVyNTA4NzY1MzY_._V1_UY268_CR0_0_182_268_AL_.jpg?1532012903" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/163/original/81kbzs9ER1L._SY445_.jpg?1532014280" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/164/original/MV5BMjEwNzM3MjcwNV5BMl5BanBnXkFtZTgwOTAwNTI1MTE_._V1_UY268_CR7_0_182_268_AL_.jpg?1532014506" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/165/original/MV5BZGQ3YjZlMjUtMDQ4Mi00NGNiLWFhODItYTUwMGM1ZGI5ZGY5XkEyXkFqcGdeQXVyNjk1Njg5NTA_._V1_UX182_CR0_0_182_268_AL_.jpg?1532014664" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/167/original/91k582OOkJL._SY445_.jpg?1532015193" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/168/original/4e818c0a1f75faadba5ce0cf89828c6705913da6.jpg?1532015656" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/200/original/31-T1.jpg?1539569803" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>
-                    <a class="target-serie" href="https://facebook.com">
-                        <img src="https://www.lacartoons.com/system/series/portadas/000/000/278/original/d2865ec9b90e714bf0fef65c8a93636c.jpg?1586038055" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a>                    
-                </div>
-            </did>
-            <button class="avanzar-lista" onclick="avanzar()">&#10097;</button>
-        </div>
-        <div class="series-with-name">
-            <h2>Harry Potter</h2>
+            <h2>Harry Potter - Películas</h2>
             <did class="series-column">
                 <div id="series-row" class="series-row">
                     <a class="target-serie" href="/index.html?nombreSerie=harry1">
@@ -272,40 +132,6 @@
                         <img src="./images/harry8.jpg" alt="Harry Potter y las reliquias de la muerte 2" />
                         <div class="nombre-serie">
                             Harry Potter y<br>las reliquias de<br>la muerte 2
-                        </div>
-                    </a>
-                </div>
-            </did>
-            <button class="avanzar-lista" onclick="avanzar()">&#10097;</button>
-        </div>
-        <div class="series-with-name">
-            <h2>Cursos platzi</h2>
-            <did class="series-column">
-                <div id="series-row" class="series-row">
-                    <a class="target-serie" href="/index.html?nombreSerie=asincronismoJavascript">
-                        <img src="./images/javascript.webp" alt="Curso de Asincronismo en Javascript" />
-                        <div class="nombre-serie">
-                            Curso de<br>Asincronismo en<br>Javascript
-                        </div>
-                    </a>
-                    <a class="target-serie" href="/index.html?nombreSerie=ECMAscript6">
-                        <img src="./images/ecmascript.webp" alt="ECMAscript 6+" />
-                        <div class="nombre-serie">
-                            ECMAscript 6+
-                        </div>
-                    </a>
-                </div>
-            </did>
-            <button class="avanzar-lista" onclick="avanzar()">&#10097;</button>
-        </div>
-        <div class="series-with-name">
-            <h2>Marvel</h2>
-            <did class="series-column">
-                <div id="series-row" class="series-row">
-                    <a class="target-serie" href="/index.html?nombreSerie=IronMan3">
-                        <img src="./images/ironman3.jpg" alt="Iron Man 3" />
-                        <div class="nombre-serie">
-                            Iron Man 3
                         </div>
                     </a>
                 </div>
