Actualizando imagenes remotas a locales

--- a/indexSeriesAll.html
+++ b/indexSeriesAll.html
@@ -19,7 +19,6 @@
         <div class="menu">
             <img id="logo-menu" src="./images/logo1.png" />
             <h2 style="margin-left:10px;">Hundres</h2>
-            <!-- <img id="logo-menu" src="./images/logoRed.png" /> -->
             <button class="cerrar-sesion left" onclick="home()">Inicio</button>
             <button class="cerrar-sesion" onclick="cerrarSesion()">Cerrar sesión</button>
         </div>
@@ -30,50 +29,44 @@
             <h2>Harry Potter - Audiolibros</h2>
             <did class="series-column">
                 <div id="series-row" class="series-row">
-                    <!-- <a class="target-serie" href="/index.html?nombreSerie=Scooby">
-                        <img src="./images/scoobyPeq.jpg" alt="Scooby Doo" />
-                        <div class="nombre-serie">
-                            Scooby Doo<br>¿Donde estás?
-                        </div>
-                    </a> -->
                     <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudiolapiedrafilosofal">
-                        <img src="https://kbimages1-a.akamaihd.net/7a10b8aa-803e-4134-bc64-1207d5447e43/1200/1200/False/harry-potter-y-la-piedra-filosofal-2.jpg" alt="Scooby Doo" />
+                        <img src="./images/libro1.jpg" alt="Libro 1" />
                         <div class="nombre-serie">
                             Harry Potter<br>y la piedra filosofal
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudiolacamarasecreta">
-                        <img src="https://m.media-amazon.com/images/I/51yE3IE7yKL.jpg" alt="Scooby Doo" />
+                        <img src="./images/libro2.jpg" alt="Libro 2" />
                         <div class="nombre-serie">
                             Harry Potter<br>y la cámara secreta
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudioelprisionerodeazkaban">
-                        <img src="https://m.media-amazon.com/images/I/51CzTv50t3L._SL500_.jpg" alt="Scooby Doo" />
+                        <img src="./images/libro3.jpg" alt="Libro 3" />
                         <div class="nombre-serie">
                             Harry Potter<br>y el prisionero<br>de Azkaban
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudioelcalizdefuego">
-                        <img src="https://m.media-amazon.com/images/I/51G8SIjWprL._SL500_.jpg" alt="Scooby Doo" />
+                        <img src="./images/libro4.jpg" alt="Libro 4" />
                         <div class="nombre-serie">
                             Harry Potter<br>y el cáliz de fuego
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudiolaordendelfenix">
-                        <img src="https://m.media-amazon.com/images/I/51Me10x8VVL._SL500_.jpg" alt="Scooby Doo" />
+                        <img src="./images/libro5.jpg" alt="Libro 5" />
                         <div class="nombre-serie">
                             Harry Potter<br>y la orden<br>del fénix
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudioelmisteriodelprincipe">
-                        <img src="https://images-na.ssl-images-amazon.com/images/I/51pZPtXtFrL._SY445_SX342_QL70_ML2_.jpg" alt="Scooby Doo" />
+                        <img src="./images/libro6.jpg" alt="Libro 6" />
                         <div class="nombre-serie">
                             Harry Potter<br>y el misterio<br>del príncipe
                         </div>
                     </a>
                     <a class="target-serie" href="/index.html?nombreSerie=harrypotteraudiolasreliquias">
-                        <img src="https://images-na.ssl-images-amazon.com/images/I/51ANSXFVzTL._SY445_SX342_QL70_ML2_.jpg" alt="Scooby Doo" />
+                        <img src="./images/libro7.jpg" alt="Libro 7" />
                         <div class="nombre-serie">
                             Harry Potter<br>y las reliquias<br>de la muerte
                         </div>
